welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: type mismatch;
 found   : Unit
 required: Int
		for (x<-0 to nums.length-2) {
                      ^array667:4: error: type mismatch;
 found   : Unit
 required: Int
	if (nums.length>=2) {
        ^